--- a/config.json.sample
+++ b/config.json.sample
@@ -1,5 +1,25 @@
 {
-    "token":"random_token_key_please_change_me",
+    "tokens": [
+        {
+            "captain_id":"1",
+            "token":"random_token_key_please_change_me"
+        },
+        {
+            "captain_id":"2",
+            "token":"random_token_key_please_change_me"
+        }
+     ],
+      "servers": [
+        { 
+            "name": "Backup Server", 
+            "address": "backup.my-awesome-domain.tld",
+            "token": "random_token_key_please_change_me",
+            "requires": [
+                { "command": "backup" },
+                { "command": "snapshot" }
+            ]
+        }
+    ],
     "host":"localhost",
     "port":"1234",
     "ssl_mode":"development"
